--- a/meta.yaml
+++ b/meta.yaml
@@ -1,7 +1,7 @@
 # meta.yaml
 package:
-  version: '1.1.4'
-  name: 'planetfour-data'
+  version: '1.1.1'
+  name: 'planetfour-catalog'
 
 build:
   number: 0
